# katalyst-kickstart

./: .gitignore  LICENSE  README.md
Calculator/: Calculator.cs
Calculator.Tests/: Calculator.Tests.csproj  SimpleCalculatorTests.cs
Calculator.Tests/Service/: UserServiceTests.cs
Calculator/Service/: UserService.cs
cpp/: CMakeLists.txt  README.md  UserServiceTests.cpp  main.cpp
cpp/Model/: User.cpp  User.h
cpp/Repository/: MockUserRepository.h  UserRepository.h
cpp/Service/: UserService.cpp  UserService.h
cpp/doctest/: .clang-format  CMakeLists.txt
cpp/doctest/src/: main.cpp  main.test.cpp
csharp/nunit/: .gitignore  katalyst.sln
csharp/nunit/Calculator/: Calculator.cs
csharp/nunit/Calculator.Tests/: Calculator.Tests.csproj
csharp/nunit/Calculator/Model/: User.cs
csharp/nunit/Calculator/Repository/: UserRepository.cs
csharp/nunit/Calculator/Service/: DuplicateUserException.cs
java/junit4-kickstart-project/: build.gradle  pom.xml
java/junit5-kickstart-project/: build.gradle  pom.xml
java/maven-kickstart-project/: pom.xml
node/: README.md
node/FizzBuzz/: index.test.ts  index.ts  package.json
node/LeapYear/: index.test.ts  index.ts  package.json
node/RomanNumerals/: index.test.ts  index.ts  package.json
php/: .gitignore  README.md  composer.json  setup.sh
php/src/: AClass.php
php/test/: AClassTest.php
python/python3-kickstart/: README.md  greetings_module.py  pyproject.toml
python/python3-kickstart-project/: setup.sh
python/python3-kickstart-project/calculator/: calculator.py
python/python3-kickstart-project/calculator/tests/: calculator_py_test.py  calculator_unit_test.py
python/python3-kickstart-project/model/: user.py
python/python3-kickstart-project/repository/: user_repository.py
python/python3-kickstart-project/user_app/: user_service.py
python/python3-kickstart/python3_kickstart/: greetings_package.py
python/python3-kickstart/tests/: test_class.py  test_greetings_package.py
ruby/: Gemfile  README.md
ruby/model/: user.rb
ruby/repository/: user_repository.rb
ruby/service/: user_service.rb
ruby/spec/model/: user_spec.rb
ruby/spec/repository/: user_respository_spec.rb
ruby/spec/service/: user_service_spec.rb
typescript/: .eslintrc  .prettierrc  README.md  package.json
typescript/src/model/: customer.ts
typescript/src/queries/: customerQuery.ts
typescript/src/repositories/: customerRepository.ts
typescript/test/queries/: exampleQuery.test.ts
(+17 files in other folders)
