[tool.poetry]
name = "python3-kickstart"
version = "0.1.0"
description = ""
authors = ["jeeva <jeeva.ramu@codurance.com>"]
readme = "README.md"
packages = [{include = "python3_kickstart"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
